--- a/proximos_eventos.html
+++ b/proximos_eventos.html
@@ -700,41 +700,41 @@
     <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
       <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
         <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Turismo azul, concepto y oportunidades</strong></p>
+          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Feria Internacional del Turismo FITUR 2022</strong></p>
           </tr>
         <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3l5hdIR" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3eEE8Xy" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
         </tr>
         <tr>
-          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev2.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;30 de noviembre del 2021</td>
+          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev1.jpg" style="width:100px" /></td>
+          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;19-23 de enero del 2022</td>
         </tr>
         <tr>
-          <td style="padding:5px; text-align:left; font-size:12px"><b>Hosteltur (España)</b></td>
+          <td style="padding:5px; text-align:left; font-size:12px"><b>FITUR (España)</b></td>
         </tr>
         <tr></tr>
         <tr>
-          <td style="padding:5px;" colspan="2"><p>Inscríbete a este seminario virtual y descubre qué es el turismo azul, cómo es que impacta al sector y qué oportunidades ofrece para los prestadores de servicios turísticos.</p></td>
+          <td style="padding:5px;" colspan="2"><p>Participa en este evento, un punto de encuentro global para los profesionales del turismo y la feria líder para los mercados receptivos y emisores de Iberoamérica.</p></td>
         </tr>
       </table></td>
     <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
       <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
         <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Conversatorio: estrategias de reactivación del turismo</strong></p>
+          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Skift Megatrends 2022</strong></p>
           </tr>
         <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3FL4nr9 " target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3JtR4Op" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
         </tr>
         <tr>
-          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev3.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;30 de noviembre del 2021</td>
+          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev2.jpg" style="width:100px" /></td>
+          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;19 de enero del 2022</td>
         </tr>
         <tr>
           <td style="padding:5px; text-align:left; font-size:12px"><b>CoCreamos (Latinoamérica)</b></td>
         </tr>
         <tr></tr>
         <tr>
-          <td style="padding:5px;" colspan="2"><p>Súmate a este evento en el que un panel de expertos internacionales intercambiará experiencias, ideas y diversas estrategias para afrontar el desafío de reactivar el turismo. </p></td>
+          <td style="padding:5px;" colspan="2"><p>Regístrate y descubre cuáles serán las tendencias que, según la investigadora Skift, guiarán la recuperación del sector durante el 2022. </p></td>
         </tr>
       </table></td>
   </tr>
@@ -746,69 +746,91 @@
     <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
       <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
         <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>La estrategia en la gestión de los intangibles ¿por qué es importante?</strong></p>
+          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Hoja de ruta y presupuesto para digitalizar tu empresa</strong></p>
           </tr>
         <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3xixQFV" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3qejd4q" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+        </tr>
+        <tr>
+          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev3.jpg" style="width:100px" /></td>
+          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;26 de enero del 2022</td>
+        </tr>
+        <tr>
+          <td style="padding:5px; text-align:left; font-size:12px"><b>Cámara de Comercio de España (España) </b></td>
+        </tr>
+        <tr></tr>
+        <tr>
+          <td style="padding:5px;" colspan="2"><p>Súmate a este seminario dirigido a pymes que buscan digitalizarse y descubre qué estrategias son las más adecuadas para hacer de la transformación digital una herramienta en favor de la permanencia y el éxito.</p></td>
+        </tr>
+      </table></td>
+    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
+      <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
+        <tr>
+          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Introducción a Metodologías Ágiles</strong></p>
+          </tr>
+        <tr>
+          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/337suCs" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
         </tr>
         <tr>
           <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev4.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;30 de noviembre del 2021</td>
+          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;27 de enero del 2022</td>
         </tr>
         <tr>
-          <td style="padding:5px; text-align:left; font-size:12px"><b>Integra (España)</b></td>
+          <td style="padding:5px; text-align:left; font-size:12px"><b>ALLPÄ Consulting Services (Panamá)</b></td>
         </tr>
         <tr></tr>
         <tr>
-          <td style="padding:5px;" colspan="2"><p>Inscríbete y conoce la importancia de  la correcta gestión de la propiedad industrial e intelectual en las empresas,  tanto en el entorno <em>online</em> como <em>offline.</em> Además, descubre cómo  resguardar y poner en valor la creatividad e innovación de tus servicios.</p></td>
+          <td style="padding:5px;" colspan="2"><p>Inscríbete a este evento y conoce algunas herramientas para fortalecer la forma de gestionar tu trabajo de manera innovadora, práctica y efectiva. </p></td>
         </tr>
       </table></td>
+  </tr>
+  
+  
+  
+  <tr>
     <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
       <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
         <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>¿Cómo puede el turismo contribuir a una sociedad más accesible?</strong></p>
+          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Inteligencia de negocio: ¿qué es y para qué lo necesitas?</strong></p>
           </tr>
         <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3xegxWc " target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3HZbPzJ" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
         </tr>
         <tr>
           <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev5.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;3 de diciembre del 2021</td>
+          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;27 de enero del 2022</td>
         </tr>
         <tr>
-          <td style="padding:5px; text-align:left; font-size:12px"><b>Ideas for Change (Barcelona)</b></td>
+          <td style="padding:5px; text-align:left; font-size:12px"><b>Cámara de Comercio de España (España)</b></td>
         </tr>
         <tr></tr>
         <tr>
-          <td style="padding:5px;" colspan="2"><p>Descubre cómo los servicios y la oferta turística pueden adaptarse para fortalecer la accesibilidad, desde la búsqueda de información previa al viaje hasta las actividades en los destinos.  </p></td>
+          <td style="padding:5px;" colspan="2"><p>Participa en este seminario virtual y explora las alternativas que existen para usar los datos recogidos por una empresa para optimizar la toma de decisiones de negocios.</p></td>
         </tr>
       </table></td>
-  </tr>
-  
-  
-  
-  <tr>
-    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
-      <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
-        <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Estrategias de ventas para vender más en pospandemia</strong></p>
+    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr><table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
+      <tr>
+        <td style="padding:5px;" colspan="2"><table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
+          <tr>
+            <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Acompañamiento a pymes hacia la digitalización de productos y procesos</strong></p>
+            </tr>
+          <tr>
+            <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3CFjNew " target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
           </tr>
-        <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3CFjNew " target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
-        </tr>
-        <tr>
-          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev6.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;9 de diciembre del 2021</td>
-        </tr>
-        <tr>
-          <td style="padding:5px; text-align:left; font-size:12px"><b>InterConsulting Latam (Colombia)</b></td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td style="padding:5px;" colspan="2"><p>Explora ideas, tácticas y estrategias para fortalecer tus habilidades de venta, elegir qué soluciones tecnológicas aportan más a tu objetivo, mejorar tu innovación y creatividad, y mucho más.</p></td>
-        </tr>
-      </table></td>
-    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"></td>
+          <tr>
+            <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev6.jpg" style="width:100px" /></td>
+            <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;2 de febrero del 2022</td>
+          </tr>
+          <tr>
+            <td style="padding:5px; text-align:left; font-size:12px"><b>Acelera pyme (España)</b></td>
+          </tr>
+          <tr></tr>
+          <tr>
+            <td style="padding:5px;" colspan="2"><p>Participa en este seminario virtual y explora las alternativas que existen para usar los datos recogidos por una empresa para optimizar la toma de decisiones de negocios.</p></td>
+          </tr>
+        </table>          <p>&nbsp;</p></td>
+      </tr>
+    </table></td>
   </tr>
   
   
@@ -817,8 +839,44 @@
   
   
   <tr>
-    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;">&nbsp;</td>
-    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;">&nbsp;</td>
+    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr><table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
+      <tr>
+        <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Cómo impulsar el aprendizaje de las personas en el puesto de trabajo a través de herramientas digitales</strong></p>
+        </tr>
+      <tr>
+        <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3tiX6vu" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+      </tr>
+      <tr>
+        <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev7.jpg" style="width:100px" /></td>
+        <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;9 de febrero del 2022</td>
+      </tr>
+      <tr>
+        <td style="padding:5px; text-align:left; font-size:12px"><b>Acelera pyme (España)</b></td>
+      </tr>
+      <tr></tr>
+      <tr>
+        <td style="padding:5px;" colspan="2"><p>Descubre cómo acelerar, garantizar y gestionar el proceso de aprendizaje en tu organización de las personas que se incorporan a nuevos puestos de trabajo.</p></td>
+      </tr>
+    </table></td>
+    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr><table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
+      <tr>
+        <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>SEO y SEM: aprende cómo y cuándo utilizarlos</strong></p>
+        </tr>
+      <tr>
+        <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3tho8n3" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+      </tr>
+      <tr>
+        <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev8.jpg" style="width:100px" /></td>
+        <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;10 de febrero del 2022</td>
+      </tr>
+      <tr>
+        <td style="padding:5px; text-align:left; font-size:12px"><b>Cámara de Comercio de España (España)</b></td>
+      </tr>
+      <tr></tr>
+      <tr>
+        <td style="padding:5px;" colspan="2"><p>Regístrate y descubre cómo potenciar tu posicionamiento web a través de tácticas, estrategias, herramientas y campañas digitales.</p></td>
+      </tr>
+    </table></td>
   </tr>
   
   
