--- a/index.html
+++ b/index.html
@@ -1000,38 +1000,38 @@
                 <tr><td colspan="5"></td></tr>
   <tr>
     <td rowspan="5" width="6%">&nbsp;</td>
-    <td width="14%"><div align="center"><span style="font-size: 42px; color: #084182; font-family: Bree-Peru-Bold; text-align:center; line-height:18px"><b>30</b><br>
-      <span style="font-size: 14px;">de noviembre</span>
+    <td width="14%"><div align="center"><span style="font-size: 30px; color: #084182; font-family: Bree-Peru-Bold; text-align:center; line-height:18px"><b>19-23</b><br>
+      <span style="font-size: 14px;">de enero</span>
     </span></div></td>
     <td rowspan="5" width="3%">&nbsp;</td>
-    <td width="71%"><p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><b>Turismo azul, concepto y oportunidades
+    <td width="71%"><p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><b>Feria Internacional del Turismo FITUR 2022
 </b><br>
-        Hosteltur (España)</p>
-      <p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><strong style="color:#0079c1; text-decoration:none;"><a href="https://bit.ly/3l5hdIR">INSCRIPCIÓN</a></strong></p></td>
+        FITUR (España)</p>
+      <p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><strong style="color:#0079c1; text-decoration:none;"><a href="https://bit.ly/3eEE8Xy">INSCRIPCIÓN</a></strong></p></td>
     <td rowspan="5" width="6%">&nbsp;</td>
   </tr>
   <tr>
     <td>&nbsp;</td><td><hr></td>
     </tr>
   <tr>
-    <td><div align="center"><span style="font-size: 42px; color: #084182; font-family: Bree-Peru-Bold; text-align:center; line-height:18px"><b>30</b><br>
-      <span style="font-size: 14px;">de noviembre</span>
-    </span></div></td><td><p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><b>Conversatorio: estrategias de reactivación del turismo</b><br>
-        CoCreamos (Latinoamérica)
+    <td><div align="center"><span style="font-size: 42px; color: #084182; font-family: Bree-Peru-Bold; text-align:center; line-height:18px"><b>19</b><br>
+      <span style="font-size: 14px;">de enero</span>
+    </span></div></td><td><p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><b>Skift Megatrends 2022</b><br>
+        Skift (Estados Unidos)
 </p>
-      <p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><strong style="color:#0079c1; text-decoration:none;"><a href="https://bit.ly/3FL4nr9">INSCRIPCIÓN</a></strong></p></td>
+      <p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><strong style="color:#0079c1; text-decoration:none;"><a href="https://bit.ly/3JtR4Op">INSCRIPCIÓN</a></strong></p></td>
     </tr>
   <tr>
     <td>&nbsp;</td><td><hr></td>
     </tr>
     <tr>
-   <td><div align="center"><span style="font-size: 42px; color: #084182; font-family: Bree-Peru-Bold; text-align:center; line-height:18px"><b>30</b><br>
-      <span style="font-size: 14px;">de noviembre</span>
-    </span></div></td><td><p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><b>La estrategia en la gestión de los intangibles ¿por qué es importante?</b><br>
-        Integra (España)
+   <td><div align="center"><span style="font-size: 42px; color: #084182; font-family: Bree-Peru-Bold; text-align:center; line-height:18px"><b>26</b><br>
+      <span style="font-size: 14px;">de enero</span>
+    </span></div></td><td><p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><b>Hoja de ruta y presupuesto para digitalizar tu empresa</b><br>
+        Cámara de Comercio de España (España) 
 
 </p>
-      <p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><strong style="color:#0079c1; text-decoration:none;"><a href="https://bit.ly/3xixQFV">INSCRIPCIÓN</a></strong></p></td>
+      <p style="font-size: 14px; color: #084182; font-family: Bree-Peru-Lt; text-align:left; line-height:18px"><strong style="color:#0079c1; text-decoration:none;"><a href="https://bit.ly/3qejd4q">INSCRIPCIÓN</a></strong></p></td>
     </tr>
    <tr><td colspan="5"></td></tr>
 </table>
