--- a/0_viajeros_solitarios_tipos_elecciones_y_demandas.html
+++ b/0_viajeros_solitarios_tipos_elecciones_y_demandas.html
@@ -726,7 +726,7 @@ fjs.parentNode.insertBefore(js, fjs);
 frameborder="0" allowfullscreen class="video"></iframe>
 </div>
                       <br>
-                  <p>Cada vez son más las personas que  eligen viajar solas, ya sea para autoconocerse, para expandir sus horizontes o  aprender sobre diversos lugares y culturas. Según el estudio <em>Traveling alone</em> de la plataforma de alquiler de propiedades VacationRenter, <strong>quienes realizan  travesías de este tipo suelen hacerlo tres veces al año en promedio</strong>, por lo  que su demanda podría significar una oportunidad de recuperación para el  sector.<br>
+                  <p>Cada vez son más las personas que  eligen viajar solas, ya sea para autoconocerse, para expandir sus horizontes o  aprender sobre diversos lugares y culturas. Según el estudio <em>Traveling alone</em> de la plataforma de alquiler de propiedades VacationRenter, <strong>quienes realizan  travesías de este tipo suelen hacerlo tres veces al año en promedio</strong>, por lo  que su demanda podría significar una oportunidad de recuperación para el  sector.<br></p><p>
 VacationRenter <strong>clasifica  a los viajeros solitarios en dos tipos: los experimentados y los principiantes</strong>,  quienes presentan diferencias clave que las empresas turísticas deben tener en  cuenta para ofrecerles experiencias a su medida.                   
                   <p>En este <strong>video de Turismo In</strong>,  descubre qué caracteriza a los viajeros solitarios, cuáles son sus elecciones  al planificar su travesía y qué demandan del sector.</p>
               </div>
