--- a/1_latinoamerica_intenciones_de_viaje_para_el_2022.html
+++ b/1_latinoamerica_intenciones_de_viaje_para_el_2022.html
@@ -709,8 +709,8 @@
                  
                  
                       <br>
-                  <p>De acuerdo con el estudio <em>Destino felicidad: presentado por el poder  de viajar </em>de la cadena de hoteles Marriott International, <strong>8 de  cada 10 latinoamericanos tendrían previsto realizar un viaje de vacaciones el  próximo año</strong>. De hecho, su optimismo es tal  que un 67 % de ellos ya está ahorrando para su siguiente travesía.<br>
-                    La seguridad sanitaria sigue siendo un factor importante en su toma de  decisiones, sobre todo al escoger alojamiento. <strong>Para  un 33 % de latinoamericanos, el nivel de vacunación de los colaboradores del  establecimiento juega un papel clave</strong> y marcaría la  diferencia entre hospedarse allí o no.<br>
+                  <p>De acuerdo con el estudio <em>Destino felicidad: presentado por el poder  de viajar </em>de la cadena de hoteles Marriott International, <strong>8 de  cada 10 latinoamericanos tendrían previsto realizar un viaje de vacaciones el  próximo año</strong>. De hecho, su optimismo es tal  que un 67 % de ellos ya está ahorrando para su siguiente travesía.<br></p><p>
+                    La seguridad sanitaria sigue siendo un factor importante en su toma de  decisiones, sobre todo al escoger alojamiento. <strong>Para  un 33 % de latinoamericanos, el nivel de vacunación de los colaboradores del  establecimiento juega un papel clave</strong> y marcaría la  diferencia entre hospedarse allí o no.<br></p><p>
                   En esta <strong>infografía de Turismo In</strong>, conoce más sobre las intenciones de viaje para el 2022 de los  latinoamericanos.</p>
 <p><br>
                        <a href="assets/img/inf1.jpg" target="_self"><img class="imagefullwidth" style="width:100%" src="assets/img/inf1.jpg"></a>
