--- a/2_como_implementar_soluciones_tecnologicas_en_empresas_turisticas.html
+++ b/2_como_implementar_soluciones_tecnologicas_en_empresas_turisticas.html
@@ -727,7 +727,7 @@
 
 </figure></center>
                      <p>Sin duda, los dos últimos años se  han caracterizado por la transformación digital en el sector y la inversión que  esta ha demandado en tiempo y dinero a los proveedores de servicios turísticos.  Sin embargo, según la Adventure Travel Trade Association (ATTA) y Flywire, <strong>quizá  el mayor reto ha sido implementar soluciones sin guías de desarrollo</strong>.<br></p><p>
-En su estudio <em>Creating,  communicating, and connecting: technology in adventure travel</em>, ATTA y  Flywire presentan un paso a paso acerca de cómo poner en marcha soluciones  tecnológicas que ayuden a las empresas del sector no solo a fortalecer su  oferta, sino también a rentabilizar su inversión y, por tanto, a maximizar su eficiencia. <br>
+En su estudio <em>Creating,  communicating, and connecting: technology in adventure travel</em>, ATTA y  Flywire presentan un paso a paso acerca de cómo poner en marcha soluciones  tecnológicas que ayuden a las empresas del sector no solo a fortalecer su  oferta, sino también a rentabilizar su inversión y, por tanto, a maximizar su eficiencia. <br></p><p>
 De esta manera, tenemos lo  siguiente:</p>
                      <ul>
                        <li><b style="color:#0079c1">identificar las necesidades y servicios clave</b>; en este primer paso es <strong>crucial  hablar con los colaboradores y precisar cuáles son los mayores retos que  enfrentan</strong>. Al hacerlo, las empresas turísticas podrán determinar qué  actividades automatizables ocupan el tiempo que podrían emplear para mejorar la  experiencia del cliente.</li>
