--- a/proximos_eventos.html
+++ b/proximos_eventos.html
@@ -815,7 +815,7 @@
             <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Acompañamiento a pymes hacia la digitalización de productos y procesos</strong></p>
             </tr>
           <tr>
-            <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3CFjNew " target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
+            <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3K5AZi3" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
           </tr>
           <tr>
             <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev6.jpg" style="width:100px" /></td>
@@ -826,7 +826,7 @@
           </tr>
           <tr></tr>
           <tr>
-            <td style="padding:5px;" colspan="2"><p>Participa en este seminario virtual y explora las alternativas que existen para usar los datos recogidos por una empresa para optimizar la toma de decisiones de negocios.</p></td>
+            <td style="padding:5px;" colspan="2"><p>Sé parte de este evento virtual y conoce los beneficios de la digitalización, qué la diferencia de la transformación digital, la importancia de la recolección de datos para tener éxito y casos reales de cómo digitalizar un producto/proceso fortaleció la rentabilidad de una empresa.</p></td>
           </tr>
         </table>          <p>&nbsp;</p></td>
       </tr>
