--- a/index.html
+++ b/index.html
@@ -1065,9 +1065,7 @@
  
  
    <!--TID -->
-   <div align="center" style="background-color:#FFF"><table width="650px" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 650px; background-color:#FFF; margin:0; text-align:center"><tr>
-  <td colspan="3">
-    <a href="http://bit.ly/TIDplaylist" target="_self"><br><img src="assets/img/bicentenario.png" width="193" height="63"/><br><br></a></td></tr>
+   <div align="center" style="background-color:#FFF"><table width="650px" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 650px; background-color:#FFF; margin:0; text-align:center">
 
  <tr></table></div>
               
