--- a/0_viajeros_solitarios_tipos_elecciones_y_demandas.html
+++ b/0_viajeros_solitarios_tipos_elecciones_y_demandas.html
@@ -760,7 +760,7 @@ data-layout="button_count"><img src="img/compartirFacebook.jpg" alt="Compartir d
 
                 </div><br>
                     <!-- sidebar-title-div -->
-                    <div class="sidebar-element-container-video">
+                    <!--<div class="sidebar-element-container-video">
                         <div class="sidebar-title-div">
                             <div class="sidebar-title-text">Video</div>
                             <div class="sidebar-title-bar sidebar-title-bar-1"></div>
@@ -770,7 +770,7 @@ data-layout="button_count"><img src="img/compartirFacebook.jpg" alt="Compartir d
                                 <a href="0_viajeros_solitarios_tipos_elecciones_y_demandas.html"><div class="sidebar-element-text-video" style="font-size: 13px !important;">Viajeros solitarios: tipos, elecciones y demandas</div></a>
                             </div><br>&nbsp;
                         <div class="sidebar-arrow-div">&nbsp; </div>
-                    </div>
+                    </div>-->
 
                     <div class="sidebar-element-container">
 
