--- a/1_latinoamerica_intenciones_de_viaje_para_el_2022.html
+++ b/1_latinoamerica_intenciones_de_viaje_para_el_2022.html
@@ -740,7 +740,7 @@
 
                 </div><br>
                     <!-- sidebar-title-div -->
-                    <div class="sidebar-element-container-video">
+                    <!--<div class="sidebar-element-container-video">
                         <div class="sidebar-title-div">
                             <div class="sidebar-title-text">Video</div>
                             <div class="sidebar-title-bar sidebar-title-bar-1"></div>
@@ -750,7 +750,7 @@
                                 <a href="0_viajeros_solitarios_tipos_elecciones_y_demandas.html"><div class="sidebar-element-text-video" style="font-size: 13px !important;">Viajeros solitarios: tipos, elecciones y demandas</div></a>
                             </div><br>&nbsp;
                         <div class="sidebar-arrow-div">&nbsp; </div>
-                    </div>
+                    </div>-->
 
                     <div class="sidebar-element-container">
 
