--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
   </tr>
   <tr>
     <td style="text-align:center"><span style="font-size: 14px; color: #3f3f3f; font-family: Open sans; text-align:center; font-weight:lighter"><br>
-    Descubre qué avizoran los viajeros de la región para este año, cómo reservarían su próxima travesía, qué alojamientos elegirían, cuál sería su inversión y más.
+    Descubre qué esperan los viajeros de la región para este año, cómo reservarían su próxima travesía, qué alojamientos elegirían, cuál sería su inversión y más.
 
          <p>&nbsp;</p></span>
       </td>
