--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                 
 <!--Video-->
 
-<!--<table width="650px" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 650px; background-color:#FFF; margin:0; text-align:center"><tr>
+<table width="650px" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 650px; background-color:#FFF; margin:0; text-align:center"><tr>
   <td colspan="3"><br>
     <a href="0_viajeros_solitarios_tipos_elecciones_y_demandas.html"><img src="assets/img/vid.jpg" width="100%" height="auto"/></a></td></tr>
 
@@ -840,7 +840,7 @@
   
 
 
-</table>  -->       
+</table>      
    
    
    <!--linea mediana --> 
