--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
    <!--Video-->
 
 <table width="650px" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 650px; background-color:#FFF; margin:0; text-align:center"><tr>
-  <td colspan="3"><br>
+  <td colspan="3">
     <a href="2_como_implementar_soluciones_tecnologicas_en_empresas_turisticas.html"><img src="assets/img/des.jpg" width="100%" height="auto"/></a></td></tr>
 
  <tr></table>
