--- a/proximos_eventos.html
+++ b/proximos_eventos.html
@@ -697,46 +697,8 @@
   
   
   <tr>
-    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
-      <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
-        <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Feria Internacional del Turismo FITUR 2022</strong></p>
-          </tr>
-        <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3eEE8Xy" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
-        </tr>
-        <tr>
-          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev1.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;19-23 de enero del 2022</td>
-        </tr>
-        <tr>
-          <td style="padding:5px; text-align:left; font-size:12px"><b>FITUR (España)</b></td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td style="padding:5px;" colspan="2"><p>Participa en este evento, un punto de encuentro global para los profesionales del turismo y la feria líder para los mercados receptivos y emisores de Iberoamérica.</p></td>
-        </tr>
-      </table></td>
-    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;"><hr>
-      <table width="100%" cellpadding="0" cellspacing="0" border="0" margin="0" align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; max-width: 310px; background-color:#FFF; margin:0;">
-        <tr>
-          <td style="padding: 5px; font-size: 18px;height:70px; text-align:left" colspan="2"><p><strong>Skift Megatrends 2022</strong></p>
-          </tr>
-        <tr>
-          <td style="padding:5px; float:left" colspan="2"><a href="https://bit.ly/3JtR4Op" target="_self"><img style="width:139px" src="assets/img/mas.png" alt="" /></a></td>
-        </tr>
-        <tr>
-          <td width="13%" rowspan="3" style="padding:5px;"><img src="assets/img/ev2.jpg" style="width:100px" /></td>
-          <td width="87%" style="padding: 5px; color: #0079c1; font-weight: bold; text-align:left;  font-size:12px"><img src="assets/img/baseline-calendar_today-24px.png" alt="" style="width:20px;float:left;  font-size:12px"/>&nbsp;19 de enero del 2022</td>
-        </tr>
-        <tr>
-          <td style="padding:5px; text-align:left; font-size:12px"><b>CoCreamos (Latinoamérica)</b></td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td style="padding:5px;" colspan="2"><p>Regístrate y descubre cuáles serán las tendencias que, según la investigadora Skift, guiarán la recuperación del sector durante el 2022. </p></td>
-        </tr>
-      </table></td>
+    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;">&nbsp;</td>
+    <td style="display: inline-block; vertical-align: top; max-width: 310px; margin:0; padding:15px;">&nbsp;</td>
   </tr>
   
   
