--- a/0_viajeros_solitarios_tipos_elecciones_y_demandas.html
+++ b/0_viajeros_solitarios_tipos_elecciones_y_demandas.html
@@ -722,7 +722,7 @@ fjs.parentNode.insertBefore(js, fjs);
               
 
                   <div class="yt_turismoin">
-<iframe src="https://www.youtube.com/embed/Uz8Uv3kzTec?rel=0&autoplay=1" 
+<iframe src="https://www.youtube.com/embed/pxNrsrnlJTw?rel=0&autoplay=1" 
 frameborder="0" allowfullscreen class="video"></iframe>
 </div>
                       <br>
